--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,14 @@
     margin: -30px;
 }
 
+.carrito {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    background-color: #738095;
+    border-radius: 50px;
+}
+
 .menu {
     list-style-type: none;
     display: flex;
