--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 1rem;
+    box-shadow: 0 0 10px black;
     overflow: hidden;
 }
 
