--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,11 @@
     overflow: hidden;
 }
 
+.producto:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s;
+}
+
 .producto > div {
     padding: 1rem;
     background-color: var(--clr-main-light);
